<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game_layout_main"
    style="@style/MainTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.alexytorres.enterthevoid.GameActivity" >

    <ImageView
        android:id="@+id/activity_game_image_ball"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:contentDescription="@string/ball"
        android:src="@drawable/ball" />

    <ImageView
        android:contentDescription="@string/arrow"
        android:id="@+id/activity_game_image_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/activity_game_image_ball"
        android:layout_centerHorizontal="true"
        android:src="@drawable/arrow" />

    <TextView
        android:id="@+id/activity_game_textview_bounds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:textColor="@color/light_grey"
        android:alpha="0.5" 
        android:text="@string/rebounds"
        android:layout_alignBaseline="@+id/activity_game_textview_level"
        android:layout_marginRight="@dimen/activity_padding" />

    <TextView
        android:id="@+id/activity_game_textview_level"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:alpha="0.5"
        android:text="@string/level"
        android:layout_marginLeft="@dimen/activity_padding" />

    <ImageView
        android:id="@+id/activity_game_image_hole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/hole"
        android:src="@drawable/hole" />

    <View
        android:id="@+id/activity_game_topline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/activity_game_textview_level"
        android:layout_margin="5dp"
        android:layout_marginTop="7dp"
        android:alpha="0.5"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/activity_game_textview_loose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:alpha="0.7"
        android:background="@color/dark_grey"
        android:gravity="center|bottom"
        android:paddingBottom="25dp"
        android:text="@string/loose"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/light_grey"
        android:textStyle="italic" />

    <Button
        android:id="@+id/activity_game_menubutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/activity_game_topline"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/transparent_grey"
        android:padding="5dp"
        android:text="@string/mainmenu" />

</RelativeLayout>