<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.alexytorres.enterthevoid.AboutPopupDialog" >

    <ImageView
        android:id="@+id/dialog_popup_about_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp"
        android:src="@drawable/oxmose" />

    <TextView
        android:id="@+id/dialog_popup_about_name"
        style="@style/lightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp"
        android:layout_toRightOf="@+id/dialog_popup_about_image"
        android:text="@string/devname" />

    <TextView
        android:id="@+id/dialog_popup_about_text"
        style="@style/lightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dialog_popup_about_image"
        android:layout_below="@+id/dialog_popup_about_image"
        android:text="@string/abouttext" />

    <TextView
        android:id="@+id/dialog_popup_about_version"
        style="@style/lightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dialog_popup_about_name"
        android:layout_below="@+id/dialog_popup_about_nick"
        android:text="@string/version" />

    <TextView
        android:id="@+id/dialog_popup_about_nick"
        style="@style/lightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dialog_popup_about_version"
        android:layout_below="@+id/dialog_popup_about_name"
        android:text="@string/devnick" />

</RelativeLayout>
