<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    style="@style/MainTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_padding"
    tools:context="com.alexytorres.enterthevoid.HelpActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/activity_help_title"
            style="@style/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_action_help"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/activity_help_text"
            style="@style/lightTextBright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/helpText"
            android:layout_marginTop="5dp" />

        <Button
            android:id="@+id/activity_help_backbtn"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/goback" />
    </LinearLayout>

</ScrollView>
