<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
     >

    <View
        android:id="@+id/View1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/activity_settings_switch_vibrate"
        android:layout_margin="5dp"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/activity_settings_button_reset"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/View1"
        android:layout_margin="5dp"
        android:text="@string/reset" />

    <View
        android:id="@+id/View2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/activity_settings_button_reset"
        android:layout_margin="5dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/activity_settings_textView_statstitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/View2"
        android:layout_margin="5dp"
        android:text="@string/stats"
        android:textColor="@color/dark_grey"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/activity_settings_textView_statsbounds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/activity_settings_textView_statstitle"
        android:layout_margin="5dp"
        android:text="@string/rebounds" />

    <TextView
        android:id="@+id/activity_settings_textView_statslevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/activity_settings_textView_statsbounds"
        android:layout_marginLeft="5dp"
        android:text="@string/level" />

    <ImageView
        android:id="@+id/image_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/aboutText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/image_about"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/image_about"
        android:text="@string/about" />

    <ToggleButton
        android:id="@+id/activity_settings_switch_vibrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
         />

    <TextView
        android:id="@+id/activity_settings_button_textvibrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/activity_settings_switch_vibrate"
        android:layout_alignBottom="@+id/activity_settings_switch_vibrate"
        android:layout_alignLeft="@+id/View1"
        android:text="@string/vibrate_on_win" />

</RelativeLayout>